Atualizando o Index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta name="viewport" content=""width=devide0width, initial-scale="1.0">
+    <title>Document</title>
 <title> Título da Página</title>
+
 </head>
 <body>
+    <header>
+        <h1>Alpha EdTech Aula 02</h1>
+        <h2>Página de teste</h2>
+        <h3></h3>
+    </header>
+    <main>
+    <div>
+        <h2>Objetivos</h2>
+        <p>Ter a oportunidade de participar de um projeto desafiador no qual o meu conhecimento e o meu esforço possam ser úteis.</p>
+    </div>
 
-<h1>Meu primeiro cabeçalho</h1>
-<p>Meu primeiro parágrafo!</p>
+</body>
+
+</main>
+
+<footer>
+    <h4>
+        v0.6
+        <! comentário de teste>
+    </h4>
+</footer>
+
 
 </body>
 </html>
