--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content=""width=devide0width, initial-scale="1.0">
     <title>Document</title>
-<title> Título da Página</title>
+<title>Alpha EdTech - Aula 03 HTML</title>
 
 </head>
 <body>
     <header>
-        <h1>Alpha EdTech Aula 02</h1>
-        <h2>Página de teste</h2>
-        <h3></h3>
+        
+        <h1>João Rodrigues da Silva Neto</h1>
+        <h3>netoawey@gmail.com</h3>
+        
     </header>
     <main>
     <div>
-        <h2>Objetivos</h2>
-        <p>Ter a oportunidade de participar de um projeto desafiador no qual o meu conhecimento e o meu esforço possam ser úteis.</p>
+        <h2>Objetivos Profissionais</h2>
+        <p>
+            Ter a oportunidade de participar de<br> um projeto desafiador no qual o meu<br> conhecimento e o meu esforço possam<br> ser úteis.
+        </p>
     </div>
 
 </body>
@@ -26,7 +29,7 @@
 
 <footer>
     <h4>
-        v0.7
+        v0.8
         <! comentário de teste>
     </h4>
 </footer>
