--- a/index.html
+++ b/index.html
@@ -17,10 +17,89 @@
     </header>
     <main>
     <div>
-        <h2>Objetivos Profissionais</h2>
+        <h2>INFORMAÇÕES DE CONTATO</h2>
+        <a href="contato.html">Link para Contato</a>
+
+        <h2>OBJETIVOS PROFISSIONAIS</h2>
         <p>
             Ter a oportunidade de participar de<br> um projeto desafiador no qual o meu<br> conhecimento e o meu esforço possam<br> ser úteis.
         </p>
+
+        <h2>DADOS ACADÊMICOS</h2>
+        <ol>
+            <li> Ensino Médio - Escola de Referência em Ensino Médio Augusto Severo </li>
+            <li> Ano de Conclusão: 2014</li>
+            <li> Cidade: Recife, PE.</li>
+            <li> Ensino Superior - Universidade Federal de Pernambuco</li>
+            <li> Ano de Conclusão: 2024</li>
+            <li> Cidade: Recife</li>
+            <li> Curso: Ciências Econômicas</li>
+        </ol>
+        <h2>EXPERIÊNCIAS PROFISSIONAIS</h2>
+        <ol>
+            <li>Portal UFPE - Professor de Geografia</li>
+            <li>Período: 03/2019 à 11/2022.</li>
+            <li>Cidade: Recife, PE.</li>
+            <li>Funções Desempenhadas: Preparar slides e fichas, dar aulas, dar monitorias.</li>
+        </ol>
+        <ol>
+            <li>Portal UFPE - Coordenador de Geografia</li>
+            <li>Período: 03/2020 à 11/2020.</li>
+            <li>Cidade: Recife, PE.</li>
+            <li>Funções Desempenhadas: Entrevistar os candidatos à professores e monitores, elaborar simulados, organizar o calendário da disciplina.</li>
+        </ol>
+        <h2>HABILIDADES PESSOAIS</h2>
+        <table>
+            <tr>
+                <th>SOFT SKILLS</th>
+            </tr>
+            <tr>
+                <td>Resolução de problemas</td>
+                <td>Organização</td>
+            </tr>
+            <tr>
+                <td>Pensamento Crítico</td>
+                <td>Criatividade</td>
+            </tr>
+            <tr>
+                <td>Flexibilidade</td>
+                <td>Inteligência Emocional</td>
+            </tr>
+            <tr>
+                <td>Comunicação</td>
+                <td>Atenção ao Detalhe</td>
+            </tr>
+            <tr>
+                <td>Trabalho em Equipe</td>
+                <td>Responsabilidade</td>
+            </tr>
+
+        </table>
+        <table>
+            <tr>
+                <th>HARD SKILS</th>
+            </tr>
+            <tr>
+                <td>Software de Computador</td>
+                <td>Gestão de Projetos</td>
+            </tr>
+            <tr>
+                <td>Design</td>
+                <td>Marketing</td>
+            </tr>
+            <tr>
+                <td>Análise de Dados</td>
+                <td>Administração</td>
+            </tr>
+            <tr>
+                <td>Nergociação</td>
+                <td>Escrita</td>
+            </tr>
+            <tr>
+                <td>Matemática</td>
+                <td>Línguas Estrangeiras</td>
+            </tr>
+        </table>
     </div>
 
 </body>
@@ -29,8 +108,7 @@
 
 <footer>
     <h4>
-        v0.8
-        <! comentário de teste>
+        v0.9.1
     </h4>
 </footer>
 
